--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,7 @@
 secrets:
-        secret_name : "dev_cis_444_secrets"
-        region_name : "us-west-2"
+        secret_name : "twillio_creds"
+        region_name : "us-west-1"
+twillio:
+        phone_number: "+18583467661"
 
 
