Made change for college name

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,8 @@
 secrets:
         secret_name : "twillio_creds"
         region_name : "us-west-1"
+college:
+        name: "WhatsAMatterU"
 twillio:
         phone_number: "+18583467661"
 
