--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,8 @@ secrets:
         region_name : "us-west-1"
 college:
         name: "WhatsAMatterU"
+chatbot:
+        name: "Bianca Del Rio"
 twillio:
         phone_number: "+18583467661"
 
