--- a/config.yml
+++ b/config.yml
@@ -2,10 +2,10 @@ secrets:
         secret_name : "twillio_creds"
         region_name : "us-west-1"
 college:
-        name: "WhatsAMatterU"
+        name: "CSUSM"
 chatbot:
-        name: "Bianca Del Rio"
+        name: "Harry Styles"
 twillio:
-        phone_number: "+18583467661"
+        phone_number: "+18583303762"
 
 
