updated image url

--- a/media.yml
+++ b/media.yml
@@ -1,2 +1,2 @@
 images:
-    catfish-image: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2Fcatch-jump-fishing-catfish-logo-design-template-inspiration-ad-sponsored-fishingcatfishcatchjump--211176670018247314%2F&psig=AOvVaw3-ZzcNWki_SCrP4m-tMPIs&ust=1676684857852000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCNC4x_y3m_0CFQAAAAAdAAAAABAD"
+    catfish-image: "https://t3.ftcdn.net/jpg/03/02/61/60/360_F_302616016_f08UvgXdufZnq9QgM6MhsxCt5GKhLbBr.jpg"
