--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-gunicorn>=20.1.0
-PyJWT>=2.3.0
-Flask-JSON>=0.3.4
-psycopg2-binary>=2.9.1
-bcrypt>=3.2.0
+PyYAML>=0.2.5
 boto3>=1.19.12
 twilio>=7.16.2
-
-
