--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # User data
 users/*.pkl
 
+# Temporary Vim files
+**/Session.vim
+**/.*.swp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
